--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                             <img class="main-img" src="image/pic1.png">
                         </div>
                         <div class="col-lg-6 ">
-                            <p class="wishes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p class="wishes">Chúc hai sinh nhật vui vẻ, tuổi mới mau ăn chóng lớn nè :)). Em cảm ơn hai trong thời gian qua đã ủng hộ em trong rất
+                                nhiều chuyện, không có hai chắc em cũng không có can đảm đi tới ngày hôm nay đâu! Dịch dã dữ quá nên hai nhớ giữ gìn sức
+                                khỏe, mà nếu không có dịch thì cũng phải ăn uống đầy đủ, ngủ đúng giờ đúng giấc nữa. Em chưa lớn đâu cho em chưa hiểu hết hai 
+                                phải chịu những áp lực gì, nhưng mà em biết em đã cô gắng rất nhiều. Ở nhà cha với mẹ cũng nhớ và nhắc hai nhiều, có
+                                điều cha mẹ không nói thôi.Hai phải mạnh mẽ lên nha hai! Dù gì thì em cũng tự hào về hai.</p>
                         </div>
                     </div>
             </div>
@@ -40,8 +41,9 @@
             
         <footer>
             <p>Make with love <i class="far fa-heart"></i></p>
-            <!-- All graphics use in this web are from Canva.com -->
-            <p>For making this web I have used features from   <a  href="https://www.canva.com/" text-decoration="none" ><img class="canva" src="image/canva_logo.jpg"></a></p>
+            <p>29/7/2021</p>
+            <!-- All graphics used in this web are from Canva.com -->
+            <p>Graphics are created by  <a  href="https://www.canva.com/" text-decoration="none" ><img class="canva" src="image/canva_logo.jpg"></a></p>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
