fix text content

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                             <p class="wishes">Chúc hai sinh nhật vui vẻ, tuổi mới mau ăn chóng lớn nè :)). Em cảm ơn hai trong thời gian qua đã ủng hộ em trong rất
                                 nhiều chuyện, không có hai chắc em cũng không có can đảm đi tới ngày hôm nay đâu! Dịch dã dữ quá nên hai nhớ giữ gìn sức
                                 khỏe, mà nếu không có dịch thì cũng phải ăn uống đầy đủ, ngủ đúng giờ đúng giấc nữa. Em chưa lớn đâu cho em chưa hiểu hết hai 
-                                phải chịu những áp lực gì, nhưng mà em biết em đã cô gắng rất nhiều. Ở nhà cha với mẹ cũng nhớ và nhắc hai nhiều, có
-                                điều cha mẹ không nói thôi.Hai phải mạnh mẽ lên nha hai! Dù gì thì em cũng tự hào về hai.</p>
+                                phải chịu những áp lực gì, nhưng mà em biết hai đã cố gắng rất nhiều. Ở nhà cha với mẹ cũng nhớ và nhắc hai nhiều, tại
+                                cha mẹ không nói thôi. Hai phải mạnh mẽ lên nha hai! Dù gì thì em cũng tự hào về hai.</p>
                         </div>
                     </div>
             </div>
